# mogbe

./: CMakeLists.txt  README.md  package.xml
config/: gazebo_params.yaml  mapper_params_localization.yaml  mapper_params_online_async.yaml  mogbe_controllers.yaml  nav2_params.yaml  nav2_params_real.yaml  view_bot.rviz  view_bot_sim.rviz  view_mogbe_real.rviz  view_mogbe_sim.rviz
description/: camera.xacro  gazebo_control.xacro  inertial_macros.xacro  lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
launch/: launch_robot.launch.py  launch_robot_dev.launch.py  launch_robot_pi_all.launch.py  launch_sim.launch.py  launch_sim_all.launch.py  localization_launch.py  mogbe_robot_dev.launch.py  mogbe_robot_pi.launch.py  mogbe_simulation.launch.py  mogbe_simulation_all.launch.py  navigation.launch.py  navigation_launch.py  online_async_launch.py  rsp.launch.py
meshes/: LD19-v1.mtl  RasPi-Camera-v1.mtl
scripts/: mogbe_line_follower.py  mogbe_move.py  mogbe_new_goal.py
worlds/: hospital.world  small_warehouse.world  test.world  wall.world
