<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mogbe</name>
  <version>2.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <build_depend>demo_nodes_cpp</build_depend>
  <build_depend>demo_nodes_py</build_depend>
  <build_depend>gazebo_ros_pkgs</build_depend>
  <build_depend>ros2_control</build_depend>
  <build_depend>ros2_controllers</build_depend>
  <build_depend>gazebo_ros2_control</build_depend>
  <build_depend>slam_toolbox</build_depend>
  <build_depend>navigation2</build_depend>
  <build_depend>nav2_bringup</build_depend>
  <build_depend>twist_mux</build_depend>
  <build_depend>xacro</build_depend>
  <build_depend>image_transport_plugins</build_depend>
  <build_depend>rqt_image_view</build_depend>
  <build_depend>v4l2_camera</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
